# cmakeHello

./: .doxygen  .gdbinit  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  apt.txt
cmake/: arm-none-eabi-gcc.cmake  arm-none-eabi-gcc.cmake.patch  x86_64-linux-gnu.cmake
hw/STM32F407G-DISC1/: .mxproject  0001-STM32F407VGTx_FLASH.ld.patch  0002-STM32F407VGTx_FLASH.ld.patch  0003-STM32F407VGTx_FLASH.ld.patch  0004-STM32F407VGTx_FLASH.ld.patch  0005-STM32F407VGTx_FLASH.ld.patch  Makefile  STM32F407G-DISC1.ioc  STM32F407VGTx_FLASH.ld  STM32F407VGTx_FLASH.ld.patch
hw/STM32F407G-DISC1/cmake/stm32cubemx/: CMakeLists.txt
inc/: hello.hpp
src/: hello.c  hello.cpp
